<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Anode</string>
    <string name="pzp_activity_name">PZP</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="arguments">Arguments:</string>
    <string name="pzhHost">PZH host name or IP address:</string>
    <string name="pzhName">User name (OpenID):</string>
    <string name="pzpName">Device name:</string>
    <string name="authCode">Authorisation code:</string>
    <string name="run_state">Run state</string>
    <string name="created">Created</string>
    <string name="started">Started</string>
    <string name="stopping">Stopping</string>
    <string name="stopped">Stopped</string>
    <string name="anode_receiver">Anode Receiver</string>
    <string name="anode_receiver_description">A broadcast receiver for controlling invocations of node.js</string>
    <string name="anode_service">Anode Service</string>
    <string name="anode_service_description">A service that permits the running of node.js invocations in the background</string>
    <string name="downloading_widget">Downloading application</string>
    <string name="installing_widget">Installing application</string>
    <string name="uninstalling_widget">Uninstalling application</string>
    <string name="scanning_storage_card">Scanning storage card</string>
    <string name="widget_icon">Widget Icon</string>
    <string name="list_activity_title">Webinos applications</string>
    <string name="install_activity_title">Installing application</string>
    <string name="download_activity_title">Downloading application</string>
    <string name="uninstall_activity_title">Uninstalling application</string>
    <string name="settings_activity_title">Application details</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_check_for_updates">Check for updates</string>
    <string name="menu_details">Details</string>
</resources>
